# PricingManagement/app/Observers/PaymentObserver.php
@@ -1,49 +1,0 @@
-<?php
-
-namespace App\Observers;
-
-use App\Models\Payment;
-use Illuminate\Support\Str;
-
-class PaymentObserver
-{
-    /**
-     * Handle the Payment "created" event.
-     */
-    public function created(Payment $payment): void
-    {
-        $payment->paymentId = 'PAY-' . strtoupper(Str::random(8));
-    }
-
-    /**
-     * Handle the Payment "updated" event.
-     */
-    public function updated(Payment $payment): void
-    {
-        //
-    }
-
-    /**
-     * Handle the Payment "deleted" event.
-     */
-    public function deleted(Payment $payment): void
-    {
-        //
-    }
-
-    /**
-     * Handle the Payment "restored" event.
-     */
-    public function restored(Payment $payment): void
-    {
-        //
-    }
-
-    /**
-     * Handle the Payment "force deleted" event.
-     */
-    public function forceDeleted(Payment $payment): void
-    {
-        //
-    }
-}
